--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.5.0",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "sass": "^1.87.0",
     "swiper": "^11.2.8",
+    "yup": "^1.6.1",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
