--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
+    "plotly.js": "^3.0.1",
     "print-js": "^1.6.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -25,6 +26,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.5.3",
     "react-scroll": "^1.9.3",
     "react-to-print": "^3.1.1",
