--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && copy web.config dist\\",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
     "@react-google-maps/api": "^2.20.6",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
@@ -28,10 +31,10 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "^6.1.6",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.5.3",
     "react-scroll": "^1.9.3",
+    "react-spinners": "^0.17.0",
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "sass": "^1.87.0",
